# cs6456

./: LICENSE  README.md
p1/: p1-4a-2.diff  p1-4b-1.diff  p1-5-1.diff  p1-5-2.diff  start_screen.sh  zipme.sh
p1/assign/: install-kernel.py
p1/assign/lesson01/: CMakeLists.txt  kernel8.img
p1/lesson04a/: kernel8.img  loooo  run_qemu.sh
p1/p1-4b-1/: README  log
p1/p1-4b-2/: log  run_qemu.sh
p1/p1-5-1/: README  kernel8.img  output
p1/p1-5-2/: README  README-xzl  kernel8.img  run_qemu.sh
p1/p1_1_to_4/: p1-4b-1.diff  p1-4b-2.diff
p1/p1_6/: '  .p16.diff.swp  README  README-xzl  p16.diff  run_qemu.sh
p1/p1_exp2/: CMakeLists.txt  run_qemu.sh
p1/p1_exp3/: Makefile.bak  Makefile.old  kernel8.img  run_qemu.sh
p1/p1_exp3_2/: Makefile
p1/test_l4a/: log  run_qemu.sh
p2/exp1/: .counter.c.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README  cas  cmake_install.cmake  counter  counter-nolock  counter.c  lab2_add.csv  m_lock  no_lock  run.sh  run.sh.bak  run_cmd.sh  spin_lock  test
p2/exp2/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  hash.c  hash_biglock.c  helper.c  list  list-hash  list-hash_biglock  list-m  list-p  list-pm  list-pml  list-pmla  out  plot.py  plot_hash.py  res-0.html  res-1.html  res-2.html  res-3.html  res-4.html  res-5.html  res-hash-0.html  res-hash-1.html  res-hash-2.html  res-hash-3.html  res-hash-4.html  res-hash-5.html  res.html  run.sh  run_hash.sh  trace-.txt  trace-hash.txt  trace-hash10.txt  trace-hash100.txt  trace-hash1000.txt  trace-hash10000.txt  (+6 more)
p3/: diff-p3-exp2-2.patch
p3/exp3/: README  (+3 more)
(+2037 files in other folders)
